--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -37,8 +37,10 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build Next.js site
-        run: pnpm next build
+      - name: Build and Export Next.js site
+        run: |
+          pnpm next build
+          pnpm next export
 
       - name: List out directory contents
         run: ls -alh ./out
