--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_MAIL_KEY=""
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=izQKnqdSFeFmrBR4X
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_zlcag89
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_pj1aufr
