--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "lint": "next lint"
    },
    "dependencies": {
+      "@emailjs/browser": "^4.4.1",
       "@heroui/avatar": "2.2.7",
       "@heroui/button": "2.2.10",
       "@heroui/card": "2.2.10",
@@ -32,8 +33,11 @@
       "motion": "^10.16.4",
       "next": "^14.0.2-canary.25",
       "next-mdx-remote": "^5.0.0",
+      "next-themes": "^0.4.6",
       "react": "^18",
       "react-dom": "^18",
+      "react-icons": "^5.5.0",
+      "react-intersection-observer": "^9.16.0",
       "shadcn": "^2.3.0",
       "shadcn-ui": "^0.9.4",
       "sonner": "^1.2.3"
