--- a/package.json
+++ b/package.json
@@ -1,56 +1,60 @@
 {
-   "name": "portfolio",
-   "version": "0.1.0",
-   "private": true,
-   "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
-   },
-   "dependencies": {
-      "@emailjs/browser": "^4.4.1",
-      "@heroui/avatar": "2.2.7",
-      "@heroui/button": "2.2.10",
-      "@heroui/card": "2.2.10",
-      "@heroui/chip": "2.2.7",
-      "@heroui/input": "2.4.10",
-      "@heroui/navbar": "2.2.9",
-      "@heroui/system": "2.4.7",
-      "@heroui/tabs": "2.2.8",
-      "@heroui/theme": "2.4.6",
-      "@heroui/tooltip": "2.2.8",
-      "@mdx-js/loader": "^3.1.0",
-      "@mdx-js/react": "^3.1.0",
-      "@next/mdx": "^15.1.6",
-      "@radix-ui/react-dialog": "^1.1.6",
-      "@shadcn/ui": "^0.0.4",
-      "@vercel/analytics": "^1.1.1",
-      "dialog": "^0.3.1",
-      "framer-motion": "^12.4.2",
-      "gray-matter": "^4.0.3",
-      "init": "^0.1.2",
-      "motion": "^10.16.4",
-      "next": "^14.0.2-canary.25",
-      "next-mdx-remote": "^5.0.0",
-      "next-themes": "^0.4.6",
-      "react": "^18",
-      "react-dom": "^18",
-      "react-icons": "^5.5.0",
-      "react-intersection-observer": "^9.16.0",
-      "shadcn": "^2.3.0",
-      "shadcn-ui": "^0.9.4",
-      "sonner": "^1.2.3"
-   },
-   "devDependencies": {
-      "@types/node": "^20",
-      "@types/react": "^18",
-      "@types/react-dom": "^18",
-      "autoprefixer": "^10",
-      "eslint": "^9.20.1",
-      "eslint-config-next": "13.5.4",
-      "postcss": "^8",
-      "tailwindcss": "^3",
-      "typescript": "^5"
-   }
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@heroui/avatar": "2.2.7",
+    "@heroui/button": "2.2.10",
+    "@heroui/card": "2.2.10",
+    "@heroui/chip": "2.2.7",
+    "@heroui/input": "2.4.10",
+    "@heroui/navbar": "2.2.9",
+    "@heroui/system": "2.4.7",
+    "@heroui/tabs": "2.2.8",
+    "@heroui/theme": "2.4.6",
+    "@heroui/tooltip": "2.2.8",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@shadcn/ui": "^0.0.4",
+    "@vercel/analytics": "^1.1.1",
+    "dialog": "^0.3.1",
+    "framer-motion": "^12.4.2",
+    "gray-matter": "^4.0.3",
+    "init": "^0.1.2",
+    "motion": "^10.16.4",
+    "next": "15.2.4",
+    "next-themes": "^0.4.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "shadcn": "^2.3.0",
+    "shadcn-ui": "^0.9.4",
+    "sonner": "^1.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.17.28",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10",
+    "eslint": "^9.20.1",
+    "eslint-config-next": "15.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.0.12",
+      "@types/react-dom": "19.0.4"
+    }
+  }
 }
