--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://litzeus.github.io/tejas-athalye-portfolio",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LitZeus/tejas-athalye-portfolio.git"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
